2010-06-17  Dimitri Glazkov  <dglazkov@chromium.org>

Unreviewed, rolling out r61340.
        http://trac.webkit.org/changeset/61340
        https://bugs.webkit.org/show_bug.cgi?id=36282

        Broke several editing tests.

        * fast/css/duplicate-property-in-rule-expected.txt: Removed.
        * fast/css/duplicate-property-in-rule.html: Removed.
2010-06-17  Dimitri Glazkov  <dglazkov@chromium.org>

        Unreviewed, rolling out r61340.
        http://trac.webkit.org/changeset/61340
        https://bugs.webkit.org/show_bug.cgi?id=36282

        Broke several editing tests.

        * css/CSSMutableStyleDeclaration.cpp:
        (WebCore::CSSMutableStyleDeclaration::CSSMutableStyleDeclaration):
        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseValue):
        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::applyProperty):

Canonical link: https://commits.webkit.org/52355@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61345 268f45cc-cd09-0410-ab3c-d52691b4dbfc